[package]
name = "github-pr-review"
version = "0.1.0"
edition = "2021"

# [patch.crates-io]
# tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
# socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
# hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
# reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[lib]
path = "src/github-pr-review.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
github-flows = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1"
flowsnet-platform-sdk = "0.1"
lazy_static = "1.4.0"
regex = "1.7.1"
llmservice-flows = "0.2.0"
words-count = "0.1.4"
log = "0.4"
# reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
# tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
http_req_wasi = { version = "0.10.2", features = ["wasmedge_ssl"] }
